--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
         "framer-motion": "^11.0.8",
         "lucide-react": "^0.344.0",
         "clsx": "^2.1.0",
-        "tailwind-merge": "^2.2.1"
+        "tailwind-merge": "^2.2.1",
+        "js-cookie": "^3.0.5"
     },
     "devDependencies": {
         "typescript": "^5",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@types/js-cookie": "^3.0.6",
         "autoprefixer": "^10.0.1",
         "postcss": "^8",
         "tailwindcss": "^3.3.0",
