--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "react-dom": "^18",
         "next": "14.1.0",
         "framer-motion": "^11.0.8",
+        "date-fns": "^3.3.1",
         "lucide-react": "^0.344.0",
         "clsx": "^2.1.0",
         "tailwind-merge": "^2.2.1",
